Added portfolio h2 headers

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,3 +1,6 @@
 <html>
     <h1>JY's Portfolio</h1>
+    <h2>Machine Learning</h2>
+    <h2>Digital Signal Processing</h2>
+    <h2>Undergraduate Teaching Opportunities Program</h2>
 </html>
