Added portfolio details for each project

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,6 +1,12 @@
 <html>
     <h1>JY's Portfolio</h1>
     <h2>Machine Learning</h2>
+    <h3><a href="https://github.com/li-jiang-yan/iris-ml-gravitation-solver">iris-ml-gravitation-solver</a> (2025)</h3>
+    <p>This is an endeavor to solve the Iris classification machine learning problem adopting ideas of Newtonian gravitational potential. It is able to accurately classify the testing dataset with an accuracy of 97.4%</p>
     <h2>Digital Signal Processing</h2>
+    <h3><a href="https://github.com/li-jiang-yan/dsp-1d-project">dsp-1d-project</a> (2021)</h3>
+    <p>As a part of 30.115 Digital Signal Processing coursework, using concepts learned in Digital Signal Processing, MATLAB is used to compress JPEG images with a selectable quality by the user.</p>
     <h2>Undergraduate Teaching Opportunities Program</h2>
+    <h3><a href="https://github.com/li-jiang-yan/mss-ta-code">mss-ta-code</a> (2021)</h3>
+    <p>When I was an Undergraduate Teaching Assistant, I used the help of Python scripts to sort students' assignment scores in the correct order, and work with the Piazza Q&A platform.</p>
 </html>
