Added new machine learning projects completed on 29 Aug 2025

--- a/portfolio.html
+++ b/portfolio.html
@@ -3,6 +3,16 @@
     <h2>Machine Learning</h2>
     <h3><a href="https://github.com/li-jiang-yan/iris-ml-gravitation-solver">iris-ml-gravitation-solver</a> (2025)</h3>
     <p>This is an endeavor to solve the Iris classification machine learning problem adopting ideas of Newtonian gravitational potential. It is able to accurately classify the testing dataset with an accuracy of 97.4%</p>
+    <h3><a href="https://github.com/li-jiang-yan/iris-ml-logistic-regression-solver">iris-ml-logistic-regression-solver</a> (2025)</h3>
+    <p>This is a demonstration on solving the Iris classification machine learning problem using a logistic regression solver.</p>
+    <h3><a href="https://github.com/li-jiang-yan/diabetes-ml-linear-regression-solver">diabetes-ml-linear-regression-solver</a> (2025)</h3>
+    <p>This is a demonstration on predicting the measure of disease progression one year after baseline using linear regression. Here, three different scripts demonstrate the effect of using selections of the features on the regression model's R2 (coefficient of determination) value.</p>
+    <h3><a href="https://github.com/li-jiang-yan/wine-ml-decision-tree-solver">wine-ml-decision-tree-solver</a> (2025)</h3>
+    <p>This is a demonstration on solving the wine classification machine learning problem using decision trees.</p>
+    <h3><a href="https://github.com/li-jiang-yan/wine-ml-logistic-regression-solver">wine-ml-logistic-regression-solver</a> (2025)</h3>
+    <p>This is a demonstration on solving the wine classification machine learning problem using logistic regression.</p>
+    <h3><a href="https://github.com/li-jiang-yan/wine-ml-random-forest-solver">wine-ml-random-forest-solver</a> (2025)</h3>
+    <p>This is a demonstration on solving the wine classification machine learning problem using random forests.</p>
     <h2>Digital Signal Processing</h2>
     <h3><a href="https://github.com/li-jiang-yan/dsp-1d-project">dsp-1d-project</a> (2021)</h3>
     <p>As a part of 30.115 Digital Signal Processing coursework, using concepts learned in Digital Signal Processing, MATLAB is used to compress JPEG images with a selectable quality by the user.</p>
