Added iris-ml-svm-solver to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -931,6 +931,8 @@
     <body>
         <h1>JY's Portfolio</h1>
         <h2>Machine Learning</h2>
+        <h3><a href="https://github.com/li-jiang-yan/iris-ml-svm-solver">iris-ml-svm-solver</a> (2025)</h3>
+        <p>This is a demonstration on solving the Iris classification machine learning problem using a support vector machine (SVM) solver. The hyperplane support vectors are also plotted.</p>
         <h3><a href="https://github.com/li-jiang-yan/iris-ml-gravitation-solver">iris-ml-gravitation-solver</a> (2025)</h3>
         <p>This is an endeavor to solve the Iris classification machine learning problem adopting ideas of Newtonian gravitational potential. It is able to accurately classify the testing dataset with an accuracy of 97.4%</p>
         <h3><a href="https://github.com/li-jiang-yan/iris-ml-logistic-regression-solver">iris-ml-logistic-regression-solver</a> (2025)</h3>
