Added K-means clustering project on Iris dataset

--- a/portfolio.html
+++ b/portfolio.html
@@ -931,6 +931,8 @@
     <body>
         <h1>JY's Portfolio</h1>
         <h2>Machine Learning</h2>
+        <h3><a href="https://github.com/li-jiang-yan/iris-ml-kmeans-analyzer">iris-ml-kmeans-analyzer</a> (2025)</h3>
+        <p>This is a demonstration on analyzing the Iris dataset using K-Means clustering and using such clustering to do some classification (for curiosity)</p>
         <h3><a href="https://github.com/li-jiang-yan/iris-ml-svm-solver">iris-ml-svm-solver</a> (2025)</h3>
         <p>This is a demonstration on solving the Iris classification machine learning problem using a support vector machine (SVM) solver. The hyperplane support vectors are also plotted.</p>
         <h3><a href="https://github.com/li-jiang-yan/iris-ml-gravitation-solver">iris-ml-gravitation-solver</a> (2025)</h3>
