Added the training of an adder with artificial neural networks

--- a/portfolio.html
+++ b/portfolio.html
@@ -931,6 +931,8 @@
     <body>
         <h1>JY's Portfolio</h1>
         <h2>Machine Learning</h2>
+        <h3><a href="https://github.com/li-jiang-yan/ann-adder-training">ann-adder-training</a> (2025)</h3>
+        <p>This is a demonstration on using artificial neural networks (ANN) to train an adder</p>
         <h3><a href="https://github.com/li-jiang-yan/iris-ml-kmeans-analyzer">iris-ml-kmeans-analyzer</a> (2025)</h3>
         <p>This is a demonstration on analyzing the Iris dataset using K-Means clustering and using such clustering to do some classification (for curiosity)</p>
         <h3><a href="https://github.com/li-jiang-yan/iris-ml-svm-solver">iris-ml-svm-solver</a> (2025)</h3>
