Added more details to ann-adder-training, as well as ann-and-or-logic-gate-training

--- a/portfolio.html
+++ b/portfolio.html
@@ -931,8 +931,11 @@
     <body>
         <h1>JY's Portfolio</h1>
         <h2>Machine Learning</h2>
+        <h3><a href="https://github.com/li-jiang-yan/ann-and-or-logic-gate-training">ann-and-or-logic-gate-training</a> (2025)</h3>
+        <p>This is a demonstration on using artificial neural networks (ANN) to train AND/OR logic gates, using spreadsheets, coded gradient descent on Python, as well as TensorFlow Keras.</p>
+        <p>This repository also features a Python script used to determine an appropriate learning rate as the default learning rate is too slow.</p>
         <h3><a href="https://github.com/li-jiang-yan/ann-adder-training">ann-adder-training</a> (2025)</h3>
-        <p>This is a demonstration on using artificial neural networks (ANN) to train an adder</p>
+        <p>This is a demonstration on using artificial neural networks (ANN) to train an adder, using spreadsheets, coded gradient descent on Python, as well as TensorFlow Keras</p>
         <h3><a href="https://github.com/li-jiang-yan/iris-ml-kmeans-analyzer">iris-ml-kmeans-analyzer</a> (2025)</h3>
         <p>This is a demonstration on analyzing the Iris dataset using K-Means clustering and using such clustering to do some classification (for curiosity)</p>
         <h3><a href="https://github.com/li-jiang-yan/iris-ml-svm-solver">iris-ml-svm-solver</a> (2025)</h3>
