Added other artificial neural network projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -931,6 +931,14 @@
     <body>
         <h1>JY's Portfolio</h1>
         <h2>Machine Learning</h2>
+        <h3><a href="https://github.com/li-jiang-yan/digits-classification-keras">digits-classification-keras</a> (2025)</h3>
+        <p>This is a demonstration on using artificial neural networks (ANN) to classify samples of the Optical Recognition of Handwritten Digits dataset.</p>
+        <p>This repository also features a Python script used to determine an appropriate learning rate.</p>
+        <h3><a href="https://github.com/li-jiang-yan/iris-ml-ann-solver">iris-ml-ann-solver</a> (2025)</h3>
+        <p>This is a demonstration on using artificial neural networks (ANN) to classify samples of the Iris dataset.</p>
+        <h3><a href="https://github.com/li-jiang-yan/ann-xor-logic-gate-training">ann-xor-logic-gate-training</a> (2025)</h3>
+        <p>This is a demonstration on using artificial neural networks (ANN) to train a XOR logic gate, using TensorFlow Keras on Python.</p>
+        <p>This repository also features the use of Excel to look at each layer of the trained in detail.</p>
         <h3><a href="https://github.com/li-jiang-yan/ann-and-or-logic-gate-training">ann-and-or-logic-gate-training</a> (2025)</h3>
         <p>This is a demonstration on using artificial neural networks (ANN) to train AND/OR logic gates, using spreadsheets, coded gradient descent on Python, as well as TensorFlow Keras.</p>
         <p>This repository also features a Python script used to determine an appropriate learning rate as the default learning rate is too slow.</p>
