--- a/portfolio.html
+++ b/portfolio.html
@@ -931,40 +931,43 @@
     <body>
         <h1>JY's Portfolio</h1>
         <h2>Machine Learning</h2>
-        <h3><a href="https://github.com/li-jiang-yan/digits-classification-keras">digits-classification-keras</a> (2025)</h3>
-        <p>This is a demonstration on using artificial neural networks (ANN) to classify samples of the Optical Recognition of Handwritten Digits dataset.</p>
+        <h3><a href="https://github.com/li-jiang-yan/digits-classification_ann-tensorflow-keras">digits-classification_ann-tensorflow-keras</a> (2025)</h3>
+        <p>Developed a neural network using TensorFlow Keras to classify handwritten digits from the Optical Recognition dataset, including data preprocessing, model training, and performance evaluation.</p>
         <p>This repository also features a Python script used to determine an appropriate learning rate.</p>
-        <h3><a href="https://github.com/li-jiang-yan/iris-ml-ann-solver">iris-ml-ann-solver</a> (2025)</h3>
-        <p>This is a demonstration on using artificial neural networks (ANN) to classify samples of the Iris dataset.</p>
-        <h3><a href="https://github.com/li-jiang-yan/ann-xor-logic-gate-training">ann-xor-logic-gate-training</a> (2025)</h3>
-        <p>This is a demonstration on using artificial neural networks (ANN) to train a XOR logic gate, using TensorFlow Keras on Python.</p>
+        <h3><a href="https://github.com/li-jiang-yan/iris-classification_ann-tensorflow-keras">iris-classification_ann-tensorflow-keras</a> (2025)</h3>
+        <p>Built a neural network using TensorFlow Keras to classify Iris flower species.</p>
+        <h3><a href="https://github.com/li-jiang-yan/xor-logic-gate_ann-tensorflow-keras">xor-logic-gate_ann-tensorflow-keras</a> (2025)</h3>
+        <p>Implemented a neural network using TensorFlow Keras to learn XOR logic gate behavior.</p>
         <p>This repository also features the use of Excel to look at each layer of the trained in detail.</p>
         <h3><a href="https://github.com/li-jiang-yan/ann-and-or-logic-gate-training">ann-and-or-logic-gate-training</a> (2025)</h3>
-        <p>This is a demonstration on using artificial neural networks (ANN) to train AND/OR logic gates, using spreadsheets, coded gradient descent on Python, as well as TensorFlow Keras.</p>
+        <p>Coded a perceptron from scratch in Python as well as spreadsheets to model AND/OR logic gates, training the model using gradient descent.</p>
+        <p>Implemented the single-layer perceptron using TensorFlow Keras as well.</p>
         <p>This repository also features a Python script used to determine an appropriate learning rate as the default learning rate is too slow.</p>
-        <h3><a href="https://github.com/li-jiang-yan/ann-adder-training">ann-adder-training</a> (2025)</h3>
-        <p>This is a demonstration on using artificial neural networks (ANN) to train an adder, using spreadsheets, coded gradient descent on Python, as well as TensorFlow Keras</p>
-        <h3><a href="https://github.com/li-jiang-yan/iris-ml-kmeans-analyzer">iris-ml-kmeans-analyzer</a> (2025)</h3>
-        <p>This is a demonstration on analyzing the Iris dataset using K-Means clustering and using such clustering to do some classification (for curiosity)</p>
-        <h3><a href="https://github.com/li-jiang-yan/iris-ml-svm-solver">iris-ml-svm-solver</a> (2025)</h3>
-        <p>This is a demonstration on solving the Iris classification machine learning problem using a support vector machine (SVM) solver. The hyperplane support vectors are also plotted.</p>
-        <h3><a href="https://github.com/li-jiang-yan/iris-ml-gravitation-solver">iris-ml-gravitation-solver</a> (2025)</h3>
-        <p>This is an endeavor to solve the Iris classification machine learning problem adopting ideas of Newtonian gravitational potential. It is able to accurately classify the testing dataset with an accuracy of 97.4%</p>
-        <h3><a href="https://github.com/li-jiang-yan/iris-ml-logistic-regression-solver">iris-ml-logistic-regression-solver</a> (2025)</h3>
-        <p>This is a demonstration on solving the Iris classification machine learning problem using a logistic regression solver.</p>
-        <h3><a href="https://github.com/li-jiang-yan/diabetes-ml-linear-regression-solver">diabetes-ml-linear-regression-solver</a> (2025)</h3>
-        <p>This is a demonstration on predicting the measure of disease progression one year after baseline using linear regression. Here, three different scripts demonstrate the effect of using selections of the features on the regression model's R2 (coefficient of determination) value.</p>
-        <h3><a href="https://github.com/li-jiang-yan/wine-ml-decision-tree-solver">wine-ml-decision-tree-solver</a> (2025)</h3>
-        <p>This is a demonstration on solving the wine classification machine learning problem using decision trees.</p>
-        <h3><a href="https://github.com/li-jiang-yan/wine-ml-logistic-regression-solver">wine-ml-logistic-regression-solver</a> (2025)</h3>
-        <p>This is a demonstration on solving the wine classification machine learning problem using logistic regression.</p>
-        <h3><a href="https://github.com/li-jiang-yan/wine-ml-random-forest-solver">wine-ml-random-forest-solver</a> (2025)</h3>
-        <p>This is a demonstration on solving the wine classification machine learning problem using random forests.</p>
+        <h3><a href="https://github.com/li-jiang-yan/adder_perceptron-python">adder_perceptron-python</a> (2025)</h3>
+        <p>Constructed a single-layer perceptron in Python as well as spreadsheets to perform addition, training the model using gradient descent.</p>
+        <p>Implemented the single-layer perceptron using TensorFlow Keras as well.</p>
+        <h3><a href="https://github.com/li-jiang-yan/iris-clustering_kmeans-sklearn">iris-clustering_kmeans-sklearn</a> (2025)</h3>
+        <p>Applied K-Means clustering with Scikit-learn to group Iris samples without labels, including cluster visualization and unsupervised model evaluation.</p>
+        <h3><a href="https://github.com/li-jiang-yan/iris-classification_svm-sklearn">iris-classification_svm-sklearn</a> (2025)</h3>
+        <p>Applied SVM with Scikit-learn to classify Iris species, exploring kernel functions and visualizing decision boundaries for model interpretation.</p>
+        <h3><a href="https://github.com/li-jiang-yan/iris-classification_gravitational-learning">iris-classification_gravitational-learning</a> (2025)</h3>
+        <p>Designed a custom machine learning algorithm inspired by Newtonian gravitational potentials and applied it to classify Iris samples, achieving an accuracy of 97.4% which is comparable to standard techniques.</p>
+        <h3><a href="https://github.com/li-jiang-yan/iris-classification_logistic-regression-sklearn">iris-classification_logistic-regression-sklearn</a> (2025)</h3>
+        <p>Trained a logistic regression classifier with Scikit-learn to distinguish Iris species.</p>
+        <h3><a href="https://github.com/li-jiang-yan/diabetes-prediction_linear-regression-sklearn">diabetes-prediction_linear-regression-sklearn</a> (2025)</h3>
+        <p>Utilized a linear regression model in Scikit-learn to predict disease progression one year after baseline.</p>
+        <p>Here, three different scripts demonstrate the effect of using selections of the features on the regression model's R2 (coefficient of determination) value.</p>
+        <h3><a href="https://github.com/li-jiang-yan/wine-classification_decision-tree-sklearn">wine-classification_decision-tree-sklearn</a> (2025)</h3>
+        <p>Implemented a decision tree classifier with Scikit-learn to classify wine samples.</p>
+        <h3><a href="https://github.com/li-jiang-yan/wine-classification_logistic-regression-sklearn">wine-classification_logistic-regression-sklearn</a> (2025)</h3>
+        <p>Developed a logistic regression model with Scikit-learn to classify wine samples.</p>
+        <h3><a href="https://github.com/li-jiang-yan/wine-classification_random-forest-sklearn">wine-classification_random-forest-sklearn</a> (2025)</h3>
+        <p>Built a random forest classifier in Scikit-learn to classify wine samples.</p>
         <h2>Digital Signal Processing</h2>
         <h3><a href="https://github.com/li-jiang-yan/dsp-1d-project">dsp-1d-project</a> (2021)</h3>
-        <p>As a part of 30.115 Digital Signal Processing coursework, using concepts learned in Digital Signal Processing, MATLAB is used to compress JPEG images with a selectable quality by the user.</p>
+        <p>Built a customizable JPEG image compressor with MATLAB and concepts in Digital Signal Processing as part of 30.115 Digital Signal Processing course.</p>
         <h2>Undergraduate Teaching Opportunities Program</h2>
         <h3><a href="https://github.com/li-jiang-yan/mss-ta-code">mss-ta-code</a> (2021)</h3>
-        <p>When I was an Undergraduate Teaching Assistant, I used the help of Python scripts to sort students' assignment scores in the correct order, and work with the Piazza Q&A platform.</p>
+        <p>Written Python scripts to sort students' assignment scores correctly and work with the Piazza Q&A forum when I was an Undergraduate Teaching Assistant.</p>
     </body>
 </html>
