Added the missing word model to the description of xor-logic-gate_ann-tensorflow-keras

--- a/portfolio.html
+++ b/portfolio.html
@@ -938,7 +938,7 @@
         <p>Built a neural network using TensorFlow Keras to classify Iris flower species.</p>
         <h3><a href="https://github.com/li-jiang-yan/xor-logic-gate_ann-tensorflow-keras">xor-logic-gate_ann-tensorflow-keras</a> (2025)</h3>
         <p>Implemented a neural network using TensorFlow Keras to learn XOR logic gate behavior.</p>
-        <p>This repository also features the use of Excel to look at each layer of the trained in detail.</p>
+        <p>This repository also features the use of Excel to look at each layer of the trained model in detail.</p>
         <h3><a href="https://github.com/li-jiang-yan/ann-and-or-logic-gate-training">ann-and-or-logic-gate-training</a> (2025)</h3>
         <p>Coded a perceptron from scratch in Python as well as spreadsheets to model AND/OR logic gates, training the model using gradient descent.</p>
         <p>Implemented the single-layer perceptron using TensorFlow Keras as well.</p>
