Added the full form of the acronym SVM (Support Vector Machine) to iris-classification_svm-sklearn

--- a/portfolio.html
+++ b/portfolio.html
@@ -949,7 +949,7 @@
         <h3><a href="https://github.com/li-jiang-yan/iris-clustering_kmeans-sklearn">iris-clustering_kmeans-sklearn</a> (2025)</h3>
         <p>Applied K-Means clustering with Scikit-learn to group Iris samples without labels, including cluster visualization and unsupervised model evaluation.</p>
         <h3><a href="https://github.com/li-jiang-yan/iris-classification_svm-sklearn">iris-classification_svm-sklearn</a> (2025)</h3>
-        <p>Applied SVM with Scikit-learn to classify Iris species, exploring kernel functions and visualizing decision boundaries for model interpretation.</p>
+        <p>Applied SVM (Support Vector Machines) with Scikit-learn to classify Iris species, exploring kernel functions and visualizing decision boundaries for model interpretation.</p>
         <h3><a href="https://github.com/li-jiang-yan/iris-classification_gravitational-learning">iris-classification_gravitational-learning</a> (2025)</h3>
         <p>Designed a custom machine learning algorithm inspired by Newtonian gravitational potentials and applied it to classify Iris samples, achieving an accuracy of 97.4% which is comparable to standard techniques.</p>
         <h3><a href="https://github.com/li-jiang-yan/iris-classification_logistic-regression-sklearn">iris-classification_logistic-regression-sklearn</a> (2025)</h3>
