Added images for some of the projects for illustration purposes

--- a/portfolio.html
+++ b/portfolio.html
@@ -927,11 +927,15 @@
         p {
             width: 75%;
         }
+        img {
+            width: 75%;
+        }
     </style>
     <body>
         <h1>JY's Portfolio</h1>
         <h2>Machine Learning</h2>
         <h3><a href="https://github.com/li-jiang-yan/digits-classification_ann-tensorflow-keras">digits-classification_ann-tensorflow-keras</a> (2025)</h3>
+        <img src="https://raw.githubusercontent.com/li-jiang-yan/digits-classification_ann-tensorflow-keras/refs/heads/main/accuracy_vs_learning_rate_5.png" alt="">
         <p>Developed a neural network using TensorFlow Keras to classify handwritten digits from the Optical Recognition dataset, including data preprocessing, model training, and performance evaluation.</p>
         <p>This repository also features a Python script used to determine an appropriate learning rate.</p>
         <h3><a href="https://github.com/li-jiang-yan/iris-classification_ann-tensorflow-keras">iris-classification_ann-tensorflow-keras</a> (2025)</h3>
@@ -939,7 +943,8 @@
         <h3><a href="https://github.com/li-jiang-yan/xor-logic-gate_ann-tensorflow-keras">xor-logic-gate_ann-tensorflow-keras</a> (2025)</h3>
         <p>Implemented a neural network using TensorFlow Keras to learn XOR logic gate behavior.</p>
         <p>This repository also features the use of Excel to look at each layer of the trained model in detail.</p>
-        <h3><a href="https://github.com/li-jiang-yan/ann-and-or-logic-gate-training">ann-and-or-logic-gate-training</a> (2025)</h3>
+        <h3><a href="https://github.com/li-jiang-yan/and-or-logic-gate_perceptron-python">and-or-logic-gate_perceptron-python</a> (2025)</h3>
+        <img src="https://raw.githubusercontent.com/li-jiang-yan/and-or-logic-gate_perceptron-python/refs/heads/main/Figure_1.png" alt="">
         <p>Coded a perceptron from scratch in Python as well as spreadsheets to model AND/OR logic gates, training the model using gradient descent.</p>
         <p>Implemented the single-layer perceptron using TensorFlow Keras as well.</p>
         <p>This repository also features a Python script used to determine an appropriate learning rate as the default learning rate is too slow.</p>
@@ -947,8 +952,10 @@
         <p>Constructed a single-layer perceptron in Python as well as spreadsheets to perform addition, training the model using gradient descent.</p>
         <p>Implemented the single-layer perceptron using TensorFlow Keras as well.</p>
         <h3><a href="https://github.com/li-jiang-yan/iris-clustering_kmeans-sklearn">iris-clustering_kmeans-sklearn</a> (2025)</h3>
+        <img src="https://raw.githubusercontent.com/li-jiang-yan/iris-clustering_kmeans-sklearn/refs/heads/main/wcss_plot.png" alt="">
         <p>Applied K-Means clustering with Scikit-learn to group Iris samples without labels, including cluster visualization and unsupervised model evaluation.</p>
         <h3><a href="https://github.com/li-jiang-yan/iris-classification_svm-sklearn">iris-classification_svm-sklearn</a> (2025)</h3>
+        <img src="https://raw.githubusercontent.com/li-jiang-yan/iris-classification_svm-sklearn/refs/heads/main/Figure_1.png" alt="">
         <p>Applied SVM (Support Vector Machines) with Scikit-learn to classify Iris species, exploring kernel functions and visualizing decision boundaries for model interpretation.</p>
         <h3><a href="https://github.com/li-jiang-yan/iris-classification_gravitational-learning">iris-classification_gravitational-learning</a> (2025)</h3>
         <p>Designed a custom machine learning algorithm inspired by Newtonian gravitational potentials and applied it to classify Iris samples, achieving an accuracy of 97.4% which is comparable to standard techniques.</p>
@@ -958,6 +965,7 @@
         <p>Utilized a linear regression model in Scikit-learn to predict disease progression one year after baseline.</p>
         <p>Here, three different scripts demonstrate the effect of using selections of the features on the regression model's R2 (coefficient of determination) value.</p>
         <h3><a href="https://github.com/li-jiang-yan/wine-classification_decision-tree-sklearn">wine-classification_decision-tree-sklearn</a> (2025)</h3>
+        <img src="https://raw.githubusercontent.com/li-jiang-yan/wine-classification_decision-tree-sklearn/refs/heads/main/decision_tree.png" alt="">
         <p>Implemented a decision tree classifier with Scikit-learn to classify wine samples.</p>
         <h3><a href="https://github.com/li-jiang-yan/wine-classification_logistic-regression-sklearn">wine-classification_logistic-regression-sklearn</a> (2025)</h3>
         <p>Developed a logistic regression model with Scikit-learn to classify wine samples.</p>
