Added picture for digits-classification_ann-tensorflow-keras project to illustrate what model does

--- a/portfolio.html
+++ b/portfolio.html
@@ -939,6 +939,7 @@
         <h1>JY's Portfolio</h1>
         <h2>Machine Learning</h2>
         <h3><a href="https://github.com/li-jiang-yan/digits-classification_ann-tensorflow-keras">digits-classification_ann-tensorflow-keras</a> (2025)</h3>
+        <img src="https://raw.githubusercontent.com/li-jiang-yan/digits-classification_ann-tensorflow-keras/refs/heads/main/plot.png" alt="">
         <p>Developed a neural network using TensorFlow Keras to classify handwritten digits from the Optical Recognition dataset, including data preprocessing, model training, and performance evaluation.</p>
         <p>This repository also features a Python script used to determine an appropriate learning rate.</p>
         <img src="https://raw.githubusercontent.com/li-jiang-yan/digits-classification_ann-tensorflow-keras/refs/heads/main/accuracy_vs_learning_rate.png" alt="" />
