Added visualization for xor-logic-gate_ann-tensorflow-keras

--- a/portfolio.html
+++ b/portfolio.html
@@ -946,6 +946,7 @@
         <h3><a href="https://github.com/li-jiang-yan/iris-classification_ann-tensorflow-keras">iris-classification_ann-tensorflow-keras</a> (2025)</h3>
         <p>Built a neural network using TensorFlow Keras to classify Iris flower species.</p>
         <h3><a href="https://github.com/li-jiang-yan/xor-logic-gate_ann-tensorflow-keras">xor-logic-gate_ann-tensorflow-keras</a> (2025)</h3>
+        <img src="https://raw.githubusercontent.com/li-jiang-yan/xor-logic-gate_ann-tensorflow-keras/refs/heads/main/visualization.png" alt="" style="max-width: 40%;">
         <p>Implemented a neural network using TensorFlow Keras to learn XOR logic gate behavior.</p>
         <p>This repository also features the use of Excel to look at each layer of the trained model in detail.</p>
         <h3><a href="https://github.com/li-jiang-yan/and-or-logic-gate_perceptron-python">and-or-logic-gate_perceptron-python</a> (2025)</h3>
