Added more visualizations for and-or-logic-gate_perceptron-python

--- a/portfolio.html
+++ b/portfolio.html
@@ -950,10 +950,11 @@
         <p>Implemented a neural network using TensorFlow Keras to learn XOR logic gate behavior.</p>
         <p>This repository also features the use of Excel to look at each layer of the trained model in detail.</p>
         <h3><a href="https://github.com/li-jiang-yan/and-or-logic-gate_perceptron-python">and-or-logic-gate_perceptron-python</a> (2025)</h3>
-        <img src="https://raw.githubusercontent.com/li-jiang-yan/and-or-logic-gate_perceptron-python/refs/heads/main/Figure_1.png" alt="" />
+        <img src="https://raw.githubusercontent.com/li-jiang-yan/and-or-logic-gate_perceptron-python/refs/heads/main/visualization.png" alt="" style="max-width: 40%;">
         <p>Coded a perceptron from scratch in Python as well as spreadsheets to model AND/OR logic gates, training the model using gradient descent.</p>
         <p>Implemented the single-layer perceptron using TensorFlow Keras as well.</p>
         <p>This repository also features a Python script used to determine an appropriate learning rate as the default learning rate is too slow.</p>
+        <img src="https://raw.githubusercontent.com/li-jiang-yan/and-or-logic-gate_perceptron-python/refs/heads/main/Figure_1.png" alt="" />
         <h3><a href="https://github.com/li-jiang-yan/adder_perceptron-python">adder_perceptron-python</a> (2025)</h3>
         <p>Constructed a single-layer perceptron in Python as well as spreadsheets to perform addition, training the model using gradient descent.</p>
         <p>Implemented the single-layer perceptron using TensorFlow Keras as well.</p>
