--- a/portfolio.html
+++ b/portfolio.html
@@ -959,8 +959,9 @@
         <p>Constructed a single-layer perceptron in Python as well as spreadsheets to perform addition, training the model using gradient descent.</p>
         <p>Implemented the single-layer perceptron using TensorFlow Keras as well.</p>
         <h3><a href="https://github.com/li-jiang-yan/iris-clustering_kmeans-sklearn">iris-clustering_kmeans-sklearn</a> (2025)</h3>
-        <img src="https://raw.githubusercontent.com/li-jiang-yan/iris-clustering_kmeans-sklearn/refs/heads/main/wcss_plot.png" alt="" />
+        <img src="https://raw.githubusercontent.com/li-jiang-yan/iris-clustering_kmeans-sklearn/refs/heads/main/cluster_real_plot.png" alt="">
         <p>Applied K-Means clustering with Scikit-learn to group Iris samples without labels, including cluster visualization and unsupervised model evaluation.</p>
+        <img src="https://raw.githubusercontent.com/li-jiang-yan/iris-clustering_kmeans-sklearn/refs/heads/main/wcss_plot.png" alt="" />
         <h3><a href="https://github.com/li-jiang-yan/iris-classification_svm-sklearn">iris-classification_svm-sklearn</a> (2025)</h3>
         <img src="https://raw.githubusercontent.com/li-jiang-yan/iris-classification_svm-sklearn/refs/heads/main/Figure_1.png" alt="" />
         <p>Applied SVM (Support Vector Machines) with Scikit-learn to classify Iris species, exploring kernel functions and visualizing decision boundaries for model interpretation.</p>
