--- a/portfolio.html
+++ b/portfolio.html
@@ -938,6 +938,11 @@
     <body>
         <h1>JY's Portfolio</h1>
         <h2>Machine Learning</h2>
+        <h3><a href="https://github.com/li-jiang-yan/credit-card-default-classification_various">credit-card-default-classification_various</a> (2025)</h3>
+        <img src="https://raw.githubusercontent.com/li-jiang-yan/credit-card-default-classification_various/refs/heads/main/model_comparison.png" alt="">
+        <p><i>Notes: LR: logistic regression; RF-1F: random forest with only 1 feature (feature 6); RF-MF: random forest with multiple features; SVM-L: linear SVM; ANN-1F: artificial neural networks with only 1 feature (feature 6); ANN-MF: artificial neural networks with multiple features</i></p>
+        <p>Developed several classification models (e.g. logistic regression, random forest, SVMs, artificial neural networks) to predict credit card defaults using real world data.</p>
+        <p>This repository also features Python scripts used to determine the best features and learning rates.</p>
         <h3><a href="https://github.com/li-jiang-yan/digits-classification_ann-tensorflow-keras">digits-classification_ann-tensorflow-keras</a> (2025)</h3>
         <img src="https://raw.githubusercontent.com/li-jiang-yan/digits-classification_ann-tensorflow-keras/refs/heads/main/plot.png" alt="">
         <p>Developed a neural network using TensorFlow Keras to classify handwritten digits from the Optical Recognition dataset, including data preprocessing, model training, and performance evaluation.</p>
