--- a/portfolio.html
+++ b/portfolio.html
@@ -938,6 +938,9 @@
     <body>
         <h1>JY's Portfolio</h1>
         <h2>Machine Learning</h2>
+        <h3><a href="https://github.com/li-jiang-yan/linkedin-job-skills-analysis_nlp-spacy">linkedin-job-skills-analysis_nlp-spacy</a> (2026)</h3>
+        <img src="https://raw.githubusercontent.com/li-jiang-yan/linkedin-job-skills-analysis_nlp-spacy/refs/heads/main/skill_stat.png" alt="">
+        <p>Used NLP on spaCy to analyze job descriptions Computer Science LinkedIn job posts scraped by Scrapy to determine the most commonly demanded skills for Computer Science graduates in Singapore</p>
         <h3><a href="https://github.com/li-jiang-yan/credit-card-default-classification_various">credit-card-default-classification_various</a> (2025)</h3>
         <img src="https://raw.githubusercontent.com/li-jiang-yan/credit-card-default-classification_various/refs/heads/main/model_comparison.png" alt="">
         <p><i>Notes: LR: logistic regression; RF-1F: random forest with only 1 feature (feature 6); RF-MF: random forest with multiple features; SVM-L: linear SVM; ANN-1F: artificial neural networks with only 1 feature (feature 6); ANN-MF: artificial neural networks with multiple features</i></p>
